# shadowsocks-gtk3

./: CMakeLists.txt  README.md  main.c  main.h  shadowsocks-gtk3.desktop  ss-gtk3.glade
